fix: spacing

--- a/src/assets/styles/components/modal.css
+++ b/src/assets/styles/components/modal.css
@@ -16,6 +16,10 @@
     border-radius: var(--border-radius-slight);
     padding: var(--spacing-lg) var(--spacing-base);
 
+    & h3 {
+      margin-top: 0;
+    }
+
     @media screen and (min-width: 768px) {
       max-height: 75%;
       max-width: 75%;
